--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "express": "^4.16.4",
+    "express-session": "^1.17.2",
     "morgan": "^1.9.1",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.16.1",
+    "@types/express-session": "^1.17.4",
     "@types/morgan": "^1.7.35",
     "@types/mysql2": "github:types/mysql2",
     "mysql2": "^1.6.5",
